[workspace.package]
version = "0.0.0"
authors = ["Thorsten Lorenz <thlorenz@gmx.de>"]
repository = "https://github.com/thlorenz/yokohama"
license = "MIT"
edition = "2021"

[workspace]
members = ["actor-simple"]
resolver = "2"

[workspace.dependencies]
console-subscriber = "0.2.0"
env_logger = "0.11.3"
log = "0.4.21"
tokio = { version = "1.37.0", features = ["full"] }
