[workspace.package]
version = "0.0.0"
authors = ["Thorsten Lorenz <thlorenz@gmx.de>"]
repository = "https://github.com/thlorenz/yokohama"
license = "MIT"
edition = "2021"

[workspace]
members = ["01_actor-simple", "02_actor-pubsub"]
resolver = "2"

[workspace.dependencies]
async-trait = "0.1.80"
console-subscriber = "0.2.0"
env_logger = "0.11.3"
jsonrpc-core = "18.0.0"
jsonrpc-pubsub = "18.0.0"
jsonrpc-ws-server = "18.0.0"
log = "0.4.21"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
thiserror = "1.0.58"
tokio = { version = "1.37.0", features = ["full"] }
tokio-util = "0.7.10"
