[package]
name = "actor-simple"
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
console-subscriber = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }
